Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-44532

Cannot close Combobox with the drop down button

XMLWordPrintable

      Steps to repro:

      1. Start the Qt Quick Controls gallery, and open the "Input" tab.
      2. Open the topmost combo box with the list of fonts.
      3. Now try to close it by clicking on the dropdown button on its right side.
      4. => It will close and pop up again.

      What I did expect:
      An open combobox should close when clicking on its dropdown button.

      The exact same thing also happens with menus.

      This isn't critical, but for a user that is used to this behavior, its very annoying.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            cuke Filippo Cucchetto
            smd Jan Arve
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes