Fixed missing close of the ComboBox when clicking on it

The mouse event that dismissed a popup window should
not dispatched to the visual item. Otherwise the
menu open again.

Task-number: QTBUG-44532
Change-Id: Id8aca1634e4f1795e546230953bff49518589714
Reviewed-by: J-P Nurmi <jpnurmi@theqtcompany.com>